# kyklos

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  hy_test_01.py  orbit_elements_dev.py  orbit_satellite_dev.py  orbit_system_dev.py  orbit_traj_dev.py  pyproject.toml  pyrightconfig.json  test02.py  testing.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: benchmark_integrators.py  example_basic.py  shooter_example.py
misc/: test01py
src/kyklos/: __init__.py  config.py  correction.py  defaults.py  exceptions.py  orbit_design.py  orbital_elements.py  periodic_orbit.py  registry.py  satellite.py  shooter.py  system.py  trajectory.py  utils.py
tests/: conftest.py  test_correction_pathway.py  test_imports.py  test_multisegment.py  test_nodes.py  test_nondim.py  test_orbital_elements.py  test_periodic_orbit.py  test_satellite.py  test_shooter.py  test_shooter_numerical.py  test_stm.py  test_system_CR3BP.py  test_system_accuracy.py  test_system_compilation.py  test_system_construction.py  test_system_errors.py  test_system_evaluators.py  test_system_integration.py  test_system_propagation.py  test_system_vector_field.py  test_trajectory.py
